--- a/packages/code-viewer/styles/tooltip.css
+++ b/packages/code-viewer/styles/tooltip.css
@@ -1,8 +1,8 @@
-.el-tooltip:focus:hover,
-.el-tooltip:focus:not(.focusing) {
+.me-tooltip:focus:hover,
+.me-tooltip:focus:not(.focusing) {
   outline-width: 0;
 }
-.el-tooltip__popper {
+.me-tooltip__popper {
   position: absolute;
   border-radius: 4px;
   padding: 10px;
@@ -12,8 +12,8 @@
   min-width: 10px;
   word-wrap: break-word;
 }
-.el-tooltip__popper .popper__arrow,
-.el-tooltip__popper .popper__arrow::after {
+.me-tooltip__popper .popper__arrow,
+.me-tooltip__popper .popper__arrow::after {
   position: absolute;
   display: block;
   width: 0;
@@ -21,99 +21,99 @@
   border-color: transparent;
   border-style: solid;
 }
-.el-tooltip__popper .popper__arrow {
+.me-tooltip__popper .popper__arrow {
   border-width: 6px;
 }
-.el-tooltip__popper .popper__arrow::after {
+.me-tooltip__popper .popper__arrow::after {
   content: " ";
   border-width: 5px;
 }
-.el-tooltip__popper[x-placement^="top"] {
+.me-tooltip__popper[x-placement^="top"] {
   margin-bottom: 12px;
 }
-.el-tooltip__popper[x-placement^="top"] .popper__arrow {
+.me-tooltip__popper[x-placement^="top"] .popper__arrow {
   bottom: -6px;
   border-top-color: #303133;
   border-bottom-width: 0;
 }
-.el-tooltip__popper[x-placement^="top"] .popper__arrow::after {
+.me-tooltip__popper[x-placement^="top"] .popper__arrow::after {
   bottom: 1px;
   margin-left: -5px;
   border-top-color: #303133;
   border-bottom-width: 0;
 }
-.el-tooltip__popper[x-placement^="bottom"] {
+.me-tooltip__popper[x-placement^="bottom"] {
   margin-top: 12px;
 }
-.el-tooltip__popper[x-placement^="bottom"] .popper__arrow {
+.me-tooltip__popper[x-placement^="bottom"] .popper__arrow {
   top: -6px;
   border-top-width: 0;
   border-bottom-color: #303133;
 }
-.el-tooltip__popper[x-placement^="bottom"] .popper__arrow::after {
+.me-tooltip__popper[x-placement^="bottom"] .popper__arrow::after {
   top: 1px;
   margin-left: -5px;
   border-top-width: 0;
   border-bottom-color: #303133;
 }
-.el-tooltip__popper[x-placement^="right"] {
+.me-tooltip__popper[x-placement^="right"] {
   margin-left: 12px;
 }
-.el-tooltip__popper[x-placement^="right"] .popper__arrow {
+.me-tooltip__popper[x-placement^="right"] .popper__arrow {
   left: -6px;
   border-right-color: #303133;
   border-left-width: 0;
 }
-.el-tooltip__popper[x-placement^="right"] .popper__arrow::after {
+.me-tooltip__popper[x-placement^="right"] .popper__arrow::after {
   bottom: -5px;
   left: 1px;
   border-right-color: #303133;
   border-left-width: 0;
 }
-.el-tooltip__popper[x-placement^="left"] {
+.me-tooltip__popper[x-placement^="left"] {
   margin-right: 12px;
 }
-.el-tooltip__popper[x-placement^="left"] .popper__arrow {
+.me-tooltip__popper[x-placement^="left"] .popper__arrow {
   right: -6px;
   border-right-width: 0;
   border-left-color: #303133;
 }
-.el-tooltip__popper[x-placement^="left"] .popper__arrow::after {
+.me-tooltip__popper[x-placement^="left"] .popper__arrow::after {
   right: 1px;
   bottom: -5px;
   margin-left: -5px;
   border-right-width: 0;
   border-left-color: #303133;
 }
-.el-tooltip__popper.is-dark {
+.me-tooltip__popper.is-dark {
   background: #303133;
   color: #fff;
 }
-.el-tooltip__popper.is-light {
+.me-tooltip__popper.is-light {
   background: #fff;
   border: 1px solid #303133;
 }
-.el-tooltip__popper.is-light[x-placement^="top"] .popper__arrow {
+.me-tooltip__popper.is-light[x-placement^="top"] .popper__arrow {
   border-top-color: #303133;
 }
-.el-tooltip__popper.is-light[x-placement^="top"] .popper__arrow::after {
+.me-tooltip__popper.is-light[x-placement^="top"] .popper__arrow::after {
   border-top-color: #fff;
 }
-.el-tooltip__popper.is-light[x-placement^="bottom"] .popper__arrow {
+.me-tooltip__popper.is-light[x-placement^="bottom"] .popper__arrow {
   border-bottom-color: #303133;
 }
-.el-tooltip__popper.is-light[x-placement^="bottom"] .popper__arrow::after {
+.me-tooltip__popper.is-light[x-placement^="bottom"] .popper__arrow::after {
   border-bottom-color: #fff;
 }
-.el-tooltip__popper.is-light[x-placement^="left"] .popper__arrow {
+.me-tooltip__popper.is-light[x-placement^="left"] .popper__arrow {
   border-left-color: #303133;
 }
-.el-tooltip__popper.is-light[x-placement^="left"] .popper__arrow::after {
+.me-tooltip__popper.is-light[x-placement^="left"] .popper__arrow::after {
   border-left-color: #fff;
 }
-.el-tooltip__popper.is-light[x-placement^="right"] .popper__arrow {
+.me-tooltip__popper.is-light[x-placement^="right"] .popper__arrow {
   border-right-color: #303133;
 }
-.el-tooltip__popper.is-light[x-placement^="right"] .popper__arrow::after {
+.me-tooltip__popper.is-light[x-placement^="right"] .popper__arrow::after {
   border-right-color: #fff;
 }
