--- a/examples/assets/styles/common.scss
+++ b/examples/assets/styles/common.scss
@@ -3,6 +3,19 @@
   border-radius: 4px;
 }
 
+// code {
+//   background-color: #f9fafc;
+//   padding: 0 4px;
+//   border: 1px solid #eaeefb;
+//   border-radius: 4px;
+// }
+code {
+  padding: 0.2em 0.4em;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(27, 31, 35, 0.05);
+  border-radius: 3px;
+}
 .page-container {
   width: 980px;
   margin: 0 auto;
