🎬 项目示例网站调整

--- a/examples/assets/styles/default.scss
+++ b/examples/assets/styles/default.scss
@@ -31,3 +31,8 @@ $screen-sm-max: ($screen-md-min - 1px);
 $screen-md-max: ($screen-lg-min - 1px);
 $screen-lg-max: ($screen-xl-min - 1px);
 $screen-xl-max: ($screen-xxl-min - 1px);
+
+$home-color: #0170fe;
+$header-height: 64px;
+$menu-item-border: 2px;
+$mobile-max-width: 767.99px;
