🌈 style: 项目网站首页支持响应式

--- a/examples/assets/styles/default.scss
+++ b/examples/assets/styles/default.scss
@@ -36,3 +36,6 @@ $home-color: #0170fe;
 $header-height: 64px;
 $menu-item-border: 2px;
 $mobile-max-width: 767.99px;
+
+$shadow-2: 0 3px 6px -4px rgba(0, 0, 0, 0.48), 0 6px 16px 0 rgba(0, 0, 0, 0.32),
+  0 9px 28px 8px rgba(0, 0, 0, 0.2);
