--- a/examples/assets/styles/common.scss
+++ b/examples/assets/styles/common.scss
@@ -1,30 +1,28 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
-    "Microsoft YaHei", SimSun, sans-serif;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  -webkit-tap-highlight-color: transparent;
+$font-size-base: 14px;
+$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-  &.is-component {
-    overflow: hidden;
-  }
+$body-background: #fff;
+
+body {
+  overflow-x: hidden;
+  font-size: $font-size-base;
+  font-family: $font-family;
+  background: $body-background;
 }
 
 #app {
-  height: 100%;
+  // height: 100%;
 
   &.is-component {
     overflow-y: hidden;
 
     .main-cnt {
-      padding: 0;
-      margin-top: 0;
-      height: 100%;
-      min-height: auto;
+      // padding: 0;
+      // margin-top: 0;
+      // height: 100%;
+      // min-height: auto;
     }
 
     .headerWrapper {
@@ -76,10 +74,10 @@ textarea {
 }
 
 .main-cnt {
-  margin-top: -80px;
-  padding: 80px 0 340px;
-  box-sizing: border-box;
-  min-height: 100%;
+  // margin-top: -80px;
+  // padding: 80px 0 340px;
+  // box-sizing: border-box;
+  // min-height: 100%;
 }
 
 .container,
