--- a/examples/assets/styles/common.scss
+++ b/examples/assets/styles/common.scss
@@ -1,9 +1,4 @@
-$font-size-base: 14px;
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
-$body-background: #fff;
+@import "./default.scss";
 
 body {
   overflow-x: hidden;
@@ -12,282 +7,9 @@ body {
   background: $body-background;
 }
 
-#app {
-  // height: 100%;
-
-  &.is-component {
-    overflow-y: hidden;
-
-    .main-cnt {
-      // padding: 0;
-      // margin-top: 0;
-      // height: 100%;
-      // min-height: auto;
-    }
-
-    .headerWrapper {
-      position: fixed;
-      width: 100%;
-      left: 0;
-      top: 0;
-      z-index: 1500;
-
-      .container {
-        padding: 0;
-      }
-    }
+.me-md-wrapper {
+  .hljs {
+    background: #2b2b2b;
+    color: #f8f8f2;
   }
-}
-
-a {
-  color: #409eff;
-  text-decoration: none;
-}
-
-code {
-  background-color: #f9fafc;
-  padding: 0 4px;
-  border: 1px solid #eaeefb;
-  border-radius: 4px;
-}
-
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  color: inherit;
-}
-
-.hljs {
-  line-height: 1.8;
-  font-family: Menlo, Monaco, Consolas, Courier, monospace;
-  font-size: 12px;
-  padding: 18px 24px;
-  background-color: #fafafa;
-  border: solid 1px #eaeefb;
-  margin-bottom: 25px;
-  border-radius: 4px;
-  -webkit-font-smoothing: auto;
-}
-
-.main-cnt {
-  // margin-top: -80px;
-  // padding: 80px 0 340px;
-  // box-sizing: border-box;
-  // min-height: 100%;
-}
-
-.container,
-.page-container {
-  width: 1140px;
-  padding: 0;
-  margin: 0 auto;
-}
-
-.page-container {
-  padding-top: 55px;
-
-  h2 {
-    font-size: 28px;
-    color: #1f2d3d;
-    margin: 0;
-  }
-  h3 {
-    font-size: 22px;
-  }
-  h2,
-  h3,
-  h4,
-  h5 {
-    font-weight: normal;
-    color: #1f2f3d;
-
-    &:hover a {
-      opacity: 0.4;
-    }
-
-    a {
-      float: left;
-      margin-left: -20px;
-      opacity: 0;
-      cursor: pointer;
-
-      &:hover {
-        opacity: 0.4;
-      }
-    }
-  }
-
-  p {
-    font-size: 14px;
-    color: #5e6d82;
-    line-height: 1.5em;
-  }
-
-  .tip {
-    padding: 8px 16px;
-    background-color: #ecf8ff;
-    border-radius: 4px;
-    border-left: #50bfff 5px solid;
-    margin: 20px 0;
-
-    code {
-      background-color: rgba(255, 255, 255, 0.7);
-      color: #445368;
-    }
-  }
-
-  .warning {
-    padding: 8px 16px;
-    background-color: #fff6f7;
-    border-radius: 4px;
-    border-left: #fe6c6f 5px solid;
-    margin: 20px 0;
-
-    code {
-      background-color: rgba(255, 255, 255, 0.7);
-      color: #445368;
-    }
-  }
-}
-.demo {
-  margin: 20px 0;
-}
-@media (max-width: 1140px) {
-  .container,
-  .page-container {
-    width: 100%;
-  }
-}
-
-@media (max-width: 768px) {
-  .container,
-  .page-container {
-    padding: 0 20px;
-  }
-
-  #app.is-component .headerWrapper .container {
-    padding: 0 12px;
-  }
-}
-
-// Markdown styles
-.hljs {
-  margin-bottom: 25px;
-  border-radius: 4px;
-}
-
-// code {
-//   background-color: #f9fafc;
-//   padding: 0 4px;
-//   border: 1px solid #eaeefb;
-//   border-radius: 4px;
-// }
-code {
-  padding: 0.2em 0.4em;
-  margin: 0;
-  font-size: 85%;
-  background-color: rgba(27, 31, 35, 0.05);
-  border-radius: 3px;
-}
-.page-container {
-  width: 980px;
-  margin: 0 auto;
-  padding-top: 55px;
-
-  h1 {
-    font-size: 32px;
-  }
-
-  h2 {
-    font-size: 28px;
-    color: #1f2d3d;
-    margin: 0;
-  }
-  h3 {
-    font-size: 22px;
-  }
-  h2,
-  h3,
-  h4,
-  h5 {
-    font-weight: normal;
-    color: #1f2f3d;
-
-    &:hover a {
-      opacity: 0.4;
-    }
-
-    a {
-      float: left;
-      margin-left: -20px;
-      opacity: 0;
-      cursor: pointer;
-
-      &:hover {
-        opacity: 0.4;
-      }
-    }
-  }
-
-  p {
-    font-size: 14px;
-    color: #5e6d82;
-    line-height: 1.5em;
-  }
-
-  .tip {
-    padding: 8px 16px;
-    background-color: #ecf8ff;
-    border-radius: 4px;
-    border-left: #50bfff 5px solid;
-    margin: 20px 0;
-
-    code {
-      background-color: rgba(255, 255, 255, 0.7);
-      color: #445368;
-    }
-  }
-
-  .warning {
-    padding: 8px 16px;
-    background-color: #fff6f7;
-    border-radius: 4px;
-    border-left: #fe6c6f 5px solid;
-    margin: 20px 0;
-
-    code {
-      background-color: rgba(255, 255, 255, 0.7);
-      color: #445368;
-    }
-  }
-
-  table {
-    display: block;
-    width: 100%;
-    overflow: auto;
-
-    th {
-      font-weight: 600;
-    }
-
-    td,
-    th {
-      padding: 6px 13px;
-      border: 1px solid #dfe2e5;
-    }
-    tr {
-      background-color: #fff;
-      border-top: 1px solid #c6cbd1;
-    }
-    tr:nth-child(2n) {
-      background-color: #f6f8fa;
-    }
-  }
-}
-.demo {
-  margin: 20px 0;
 }
