--- a/examples/assets/styles/component.scss
+++ b/examples/assets/styles/component.scss
@@ -1,35 +1,4 @@
-$primary-color: #1890ff;
-$white: #ffffff;
-$component-background: #ffffff;
-$border-color-split: #f0f0f0; // split border inside a component
-$border-color-inverse: $white;
-$border-width-base: 1px; // width of the border for a component
-$border-style-base: solid; // style of a components border
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
-$heading-color: rgba(0, 0, 0, 0.85);
-$site-heading-color: $heading-color;
-$site-text-color: $heading-color;
-$shadow-2: 0 3px 6px -4px rgba(0, 0, 0, 0.48), 0 6px 16px 0 rgba(0, 0, 0, 0.32),
-  0 9px 28px 8px rgba(0, 0, 0, 0.2);
-
-// Animation
-$ease-base-out: cubic-bezier(0.7, 0.3, 0.1, 1);
-$ease-base-in: cubic-bezier(0.9, 0, 0.3, 0.7);
-$ease-out: cubic-bezier(0.215, 0.61, 0.355, 1);
-$ease-in: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-$ease-in-out: cubic-bezier(0.645, 0.045, 0.355, 1);
-$ease-out-back: cubic-bezier(0.12, 0.4, 0.29, 1.46);
-$ease-in-back: cubic-bezier(0.71, -0.46, 0.88, 0.6);
-$ease-in-out-back: cubic-bezier(0.71, -0.46, 0.29, 1.46);
-$ease-out-circ: cubic-bezier(0.08, 0.82, 0.17, 1);
-$ease-in-circ: cubic-bezier(0.6, 0.04, 0.98, 0.34);
-$ease-in-out-circ: cubic-bezier(0.78, 0.14, 0.15, 0.86);
-$ease-out-quint: cubic-bezier(0.23, 1, 0.32, 1);
-$ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-$ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
+@import "./default.scss";
 
 .main-wrapper {
   position: relative;
@@ -40,7 +9,8 @@ $ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
 .main-container {
   position: relative;
   min-height: 500px;
-  padding: 0 170px 32px 64px;
+  // padding: 0 170px 32px 64px;
+  padding: 0 64px 32px 64px;
   background: $component-background;
 }
 
