--- a/src/dropdown/dropdown.css
+++ b/src/dropdown/dropdown.css
@@ -3,10 +3,11 @@
   position: relative;
   color: var(--text-light);
   font-size: 14px;
+  cursor: pointer;
 }
 
 .me-dropdown__icon {
-  font-size: 12px;
+  font-size: 13px;
   margin: 0 3px;
 }
 
@@ -44,6 +45,9 @@
   line-height: 27px;
   padding: 0 15px;
   font-size: 13px;
+  /* iconify  vertical align */
+  display: flex;
+  align-items: center;
 }
 .me-dropdown-menu__item:focus,
 .me-dropdown-menu__item:not(.is-disabled):hover {
