🌈 style: Customize markdown CSS styles
refer to `github-markdown-css`  `@primer/primitives`  `@primer/css`

--- a/examples/styles/index.css
+++ b/examples/styles/index.css
@@ -18,5 +18,8 @@
 @import "./vt-switch-appearance.css";
 @import "./vt-box.css";
 @import "./vt-badge.css";
+
 @import "./vcv-code.css";
+@import "./vcv-github-markdown.css";
+
 @import "./vcv-markdown.css";
