--- a/examples/styles/vt-doc-code.css
+++ b/examples/styles/vt-doc-code.css
@@ -26,7 +26,7 @@
   }
 }
 
-.vt-doc div[class*='language-'] {
+.vt-doc div[class*="language-"] {
   position: relative;
   margin: 28px -24px;
   background-color: #292d3e;
@@ -34,31 +34,31 @@
   transition: background-color 0.5s;
 }
 
-.dark .vt-doc div[class*='language-'] {
+.dark .vt-doc div[class*="language-"] {
   background-color: var(--vt-c-bg-soft);
 }
 
 @media (min-width: 640px) {
-  .vt-doc div[class*='language-'] {
+  .vt-doc div[class*="language-"] {
     margin: 28px 0;
     border-radius: 8px;
   }
 }
 
 @media (max-width: 639px) {
-  .vt-doc li div[class*='language-'] {
+  .vt-doc li div[class*="language-"] {
     border-radius: 8px 0 0 8px;
   }
 }
 
-.vt-doc div[class*='language-'] + div[class*='language-'],
-.vt-doc div[class$='-api'] + div[class*='language-'],
-.vt-doc div[class*='language-'] + div[class$='-api'] > div[class*='language-'] {
+.vt-doc div[class*="language-"] + div[class*="language-"],
+.vt-doc div[class$="-api"] + div[class*="language-"],
+.vt-doc div[class*="language-"] + div[class$="-api"] > div[class*="language-"] {
   margin-top: -16px;
 }
 
-.vt-doc [class*='language-'] pre,
-.vt-doc [class*='language-'] code {
+.vt-doc [class*="language-"] pre,
+.vt-doc [class*="language-"] code {
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -73,7 +73,7 @@
   hyphens: none;
 }
 
-.vt-doc [class*='language-'] pre {
+.vt-doc [class*="language-"] pre {
   position: relative;
   z-index: 1;
   margin: 0;
@@ -82,7 +82,7 @@
   overflow-x: auto;
 }
 
-.vt-doc [class*='language-'] code {
+.vt-doc [class*="language-"] code {
   display: inline-block;
   padding: 0;
   line-height: var(--vt-doc-code-line-height);
@@ -114,7 +114,7 @@
   background-color: rgba(255, 255, 255, 0.05);
 }
 
-.vt-doc div[class*='language-'].line-numbers-mode {
+.vt-doc div[class*="language-"].line-numbers-mode {
   padding-left: 32px;
 }
 
@@ -124,18 +124,18 @@
   bottom: 0;
   left: 0;
   z-index: 3;
-  border-right: 1px solid var(--vt-c-divider-light);
+  border-right: 1px solid var(--vt-c-divider-dark-2);
   padding: 13px 0 11px;
   width: 32px;
   text-align: center;
   font-family: var(--vt-font-family-mono);
   line-height: var(--vt-doc-code-line-height);
   font-size: var(--vt-doc-code-font-size);
-  color: var(--vt-c-text-3);
+  color: var(--vt-c-text-dark-3);
   transition: border-color 0.5s, color 0.5s;
 }
 
-.vt-doc [class*='language-']:before {
+.vt-doc [class*="language-"]:before {
   position: absolute;
   top: 4px;
   right: 10px;
@@ -147,12 +147,12 @@
 }
 
 @media (max-width: 480px) {
-  .vt-doc [class*='language-']:before {
+  .vt-doc [class*="language-"]:before {
     top: 1px;
     right: 5px;
     font-size: 11px;
   }
-  .vt-doc [class*='language-'] pre {
+  .vt-doc [class*="language-"] pre {
     padding: 18px 20px 12px;
   }
   .vt-doc .highlight-lines {
@@ -160,43 +160,55 @@
   }
 }
 
-.vt-doc [class~='language-vue']:before {
-  content: 'vue';
+/* .vt-doc div[class~="language-$codeLang"]:before {
+  content: "$codeLang";
+} */
+
+.vt-doc div[class~="language-vue"]:before {
+  content: "vue";
 }
 
-.vt-doc [class~='language-html']:before {
-  content: 'html';
+.vt-doc div[class~="language-html"]:before {
+  content: "html";
 }
 
-.vt-doc [class~='language-vue-html']:before {
-  content: 'template';
+.vt-doc div[class~="language-vue-html"]:before {
+  content: "template";
 }
 
-.vt-doc [class~='language-css']:before {
-  content: 'css';
+.vt-doc div[class~="language-css"]:before {
+  content: "css";
 }
 
-.vt-doc [class~='language-js']:before {
-  content: 'js';
+.vt-doc div[class~="language-js"]:before {
+  content: "js";
 }
 
-.vt-doc [class~='language-jsx']:before {
-  content: 'jsx';
+.vt-doc div[class~="language-javascript"]:before {
+  content: "js";
 }
 
-.vt-doc [class~='language-ts']:before {
-  content: 'ts';
+.vt-doc div[class~="language-jsx"]:before {
+  content: "jsx";
 }
 
-.vt-doc [class~='language-tsx']:before {
-  content: 'tsx';
+.vt-doc div[class~="language-ts"]:before {
+  content: "ts";
 }
 
-.vt-doc [class~='language-json']:before {
-  content: 'json';
+.vt-doc div[class~="language-typescript"]:before {
+  content: "ts";
 }
 
-.vt-doc [class~='language-sh']:before,
-.vt-doc [class~='language-bash']:before {
-  content: 'sh';
+.vt-doc div[class~="language-tsx"]:before {
+  content: "tsx";
+}
+
+.vt-doc div[class~="language-json"]:before {
+  content: "json";
+}
+
+.vt-doc div[class~="language-sh"]:before,
+.vt-doc div[class~="language-bash"]:before {
+  content: "sh";
 }
