--- a/src/codemirror/codemirror.css
+++ b/src/codemirror/codemirror.css
@@ -20,7 +20,6 @@
   --selected-bg: #d7d4f0;
   --selected-bg-non-focus: #d9d9d9;
   --cursor: #000;
-  --mustache: #1a1a1a;
 
   direction: ltr;
   font-family: var(--font-code);
@@ -41,7 +40,6 @@
   --property: #f07178;
   --attribute: #c792ea;
   --cursor: #fff;
-  --mustache: #fff;
 
   --selected-bg: rgba(255, 255, 255, 0.1);
   --selected-bg-non-focus: rgba(255, 255, 255, 0.15);
@@ -50,15 +48,19 @@
 /* PADDING */
 
 .CodeMirror-lines {
-  padding: 4px 0; /* Vertical padding around content */
+  padding: 4px 0;
+  /* Vertical padding around content */
 }
+
 .CodeMirror pre {
-  padding: 0 4px; /* Horizontal padding of content */
+  padding: 0 4px;
+  /* Horizontal padding of content */
 }
 
 .CodeMirror-scrollbar-filler,
 .CodeMirror-gutter-filler {
-  background-color: white; /* The little square between H and V scrollbars */
+  background-color: white;
+  /* The little square between H and V scrollbars */
 }
 
 /* GUTTER */
@@ -68,6 +70,7 @@
   background-color: transparent;
   white-space: nowrap;
 }
+
 .CodeMirror-linenumber {
   padding: 0 3px 0 5px;
   min-width: 20px;
@@ -80,6 +83,7 @@
 .CodeMirror-guttermarker {
   color: black;
 }
+
 .CodeMirror-guttermarker-subtle {
   color: #999;
 }
@@ -94,16 +98,19 @@
   line-height: 0.3;
   cursor: pointer;
 }
+
 .CodeMirror-foldgutter {
   width: 0.7em;
 }
+
 .CodeMirror-foldgutter-open,
 .CodeMirror-foldgutter-folded {
   cursor: pointer;
 }
+
 .CodeMirror-foldgutter-open:after,
 .CodeMirror-foldgutter-folded:after {
-  content: ">";
+  content: '>';
   font-size: 0.8em;
   opacity: 0.8;
   transition: transform 0.2s;
@@ -112,6 +119,7 @@
   position: relative;
   transform: rotate(90deg);
 }
+
 .CodeMirror-foldgutter-folded:after {
   transform: none;
 }
@@ -123,24 +131,29 @@
   border-right: none;
   width: 0;
 }
+
 /* Shown when moving in bi-directional text */
 .CodeMirror div.CodeMirror-secondarycursor {
   border-left: 1px solid silver;
 }
+
 .cm-fat-cursor .CodeMirror-cursor {
   width: auto;
   border: 0 !important;
   background: #7e7;
 }
+
 .cm-fat-cursor div.CodeMirror-cursors {
   z-index: 1;
 }
+
 .cm-fat-cursor-mark {
   background-color: rgba(20, 255, 20, 0.5);
   -webkit-animation: blink 1.06s steps(1) infinite;
   -moz-animation: blink 1.06s steps(1) infinite;
   animation: blink 1.06s steps(1) infinite;
 }
+
 .cm-animate-fat-cursor {
   width: auto;
   border: 0;
@@ -149,32 +162,35 @@
   animation: blink 1.06s steps(1) infinite;
   background-color: #7e7;
 }
+
 @-moz-keyframes blink {
-  0% {
-  }
+  0% {}
+
   50% {
     background-color: transparent;
   }
-  100% {
-  }
+
+  100% {}
 }
+
 @-webkit-keyframes blink {
-  0% {
-  }
+  0% {}
+
   50% {
     background-color: transparent;
   }
-  100% {
-  }
+
+  100% {}
 }
+
 @keyframes blink {
-  0% {
-  }
+  0% {}
+
   50% {
     background-color: transparent;
   }
-  100% {
-  }
+
+  100% {}
 }
 
 .cm-tab {
@@ -190,6 +206,7 @@
   bottom: -20px;
   overflow: hidden;
 }
+
 .CodeMirror-ruler {
   border-left: 1px solid #ccc;
   top: 0;
@@ -201,28 +218,36 @@
 .cm-s-default.CodeMirror {
   background-color: transparent;
 }
+
 .cm-s-default .cm-header {
   color: blue;
 }
+
 .cm-s-default .cm-quote {
   color: #090;
 }
+
 .cm-negative {
   color: #d44;
 }
+
 .cm-positive {
   color: #292;
 }
+
 .cm-header,
 .cm-strong {
   font-weight: bold;
 }
+
 .cm-em {
   font-style: italic;
 }
+
 .cm-link {
   text-decoration: underline;
 }
+
 .cm-strikethrough {
   text-decoration: line-through;
 }
@@ -234,54 +259,69 @@
 .cm-s-default .cm-punctuation {
   color: var(--base);
 }
+
 .cm-s-default .cm-property {
   color: var(--property);
 }
+
 .cm-s-default .cm-hr,
 .cm-s-default .cm-comment {
   color: var(--comment);
 }
+
 .cm-s-default .cm-attribute {
   color: var(--attribute);
 }
+
 .cm-s-default .cm-keyword {
   color: var(--keyword);
 }
+
 .cm-s-default .cm-variable {
   color: var(--variable);
 }
+
 .cm-s-default .cm-tag {
   color: var(--tags);
 }
+
 .cm-s-default .cm-bracket {
   color: var(--brackets);
 }
+
 .cm-s-default .cm-number {
   color: var(--number);
 }
+
 .cm-s-default .cm-string,
 .cm-s-default .cm-string-2 {
   color: var(--string);
 }
+
 .cm-s-default .cm-type {
   color: #085;
 }
+
 .cm-s-default .cm-meta {
-  /* color: #555; */
-  color: var(--mustache);
+  color: #555;
 }
+
 .cm-s-default .cm-qualifier {
   color: var(--qualifier);
 }
+
 .cm-s-default .cm-builtin {
   color: #7539ff;
 }
+
 .cm-s-default .cm-link {
   color: var(--flash);
 }
+
 .cm-s-default .cm-error {
   color: #ff008c;
 }
+
 .cm-invalidchar {
   color: #ff008c;
 }
@@ -295,19 +335,17 @@
 div.CodeMirror span.CodeMirror-matchingbracket {
   color: #0b0;
 }
+
 div.CodeMirror span.CodeMirror-nonmatchingbracket {
   color: #a22;
 }
+
 .CodeMirror-matchingtag {
   background: rgba(255, 150, 0, 0.3);
 }
-/* 高亮选中行背景色 */
-.CodeMirror-activeline-background {
-  background: var(--selected-bg-non-focus);
-}
 
-.CodeMirror-activeline-background:focus {
-  background: var(--selected-bg);
+.CodeMirror-activeline-background {
+  background: #e8f2ff;
 }
 
 /* STOP */
@@ -322,16 +360,19 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
 }
 
 .CodeMirror-scroll {
-  overflow: scroll !important; /* Things will break if this is overridden */
+  overflow: scroll !important;
+  /* Things will break if this is overridden */
   /* 30px is the magic margin used to hide the element's real scrollbars */
   /* See overflow: hidden in .CodeMirror */
   margin-bottom: -30px;
   margin-right: -30px;
   padding-bottom: 30px;
   height: 100%;
-  outline: none; /* Prevent dragging from highlighting the element */
+  outline: none;
+  /* Prevent dragging from highlighting the element */
   position: relative;
 }
+
 .CodeMirror-sizer {
   position: relative;
   border-right: 30px solid transparent;
@@ -348,22 +389,26 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
   z-index: 6;
   display: none;
 }
+
 .CodeMirror-vscrollbar {
   right: 0;
   top: 0;
   overflow-x: hidden;
   overflow-y: scroll;
 }
+
 .CodeMirror-hscrollbar {
   bottom: 0;
   left: 0;
   overflow-y: hidden;
   overflow-x: scroll;
 }
+
 .CodeMirror-scrollbar-filler {
   right: 0;
   bottom: 0;
 }
+
 .CodeMirror-gutter-filler {
   left: 0;
   bottom: 0;
@@ -376,6 +421,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
   min-height: 100%;
   z-index: 3;
 }
+
 .CodeMirror-gutter {
   white-space: normal;
   height: 100%;
@@ -383,34 +429,41 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
   vertical-align: top;
   margin-bottom: -30px;
 }
+
 .CodeMirror-gutter-wrapper {
   position: absolute;
   z-index: 4;
   background: none !important;
   border: none !important;
 }
+
 .CodeMirror-gutter-background {
   position: absolute;
   top: 0;
   bottom: 0;
   z-index: 4;
 }
+
 .CodeMirror-gutter-elt {
   position: absolute;
   cursor: default;
   z-index: 4;
 }
+
 .CodeMirror-gutter-wrapper ::selection {
   background-color: transparent;
 }
+
 .CodeMirror-gutter-wrapper ::-moz-selection {
   background-color: transparent;
 }
 
 .CodeMirror-lines {
   cursor: text;
-  min-height: 1px; /* prevents collapsing before first draw */
+  min-height: 1px;
+  /* prevents collapsing before first draw */
 }
+
 .CodeMirror pre {
   /* Reset some styles that the rest of the page might have set */
   -moz-border-radius: 0;
@@ -432,6 +485,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
   -webkit-font-variant-ligatures: contextual;
   font-variant-ligatures: contextual;
 }
+
 .CodeMirror-wrap pre {
   word-wrap: break-word;
   white-space: pre-wrap;
@@ -450,7 +504,8 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
 .CodeMirror-linewidget {
   position: relative;
   z-index: 2;
-  padding: 0.1px; /* Force widget margins to stay inside of the container */
+  padding: 0.1px;
+  /* Force widget margins to stay inside of the container */
 }
 
 .CodeMirror-rtl pre {
@@ -483,6 +538,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
   position: absolute;
   pointer-events: none;
 }
+
 .CodeMirror-measure pre {
   position: static;
 }
@@ -492,6 +548,7 @@ div.CodeMirror-cursors {
   position: relative;
   z-index: 3;
 }
+
 div.CodeMirror-dragcursors {
   visibility: visible;
 }
@@ -503,20 +560,24 @@ div.CodeMirror-dragcursors {
 .CodeMirror-selected {
   background: var(--selected-bg-non-focus);
 }
+
 .CodeMirror-focused .CodeMirror-selected {
   background: var(--selected-bg);
 }
+
 .CodeMirror-crosshair {
   cursor: crosshair;
 }
+
 .CodeMirror-line::selection,
-.CodeMirror-line > span::selection,
-.CodeMirror-line > span > span::selection {
+.CodeMirror-line>span::selection,
+.CodeMirror-line>span>span::selection {
   background: var(--selected-bg);
 }
+
 .CodeMirror-line::-moz-selection,
-.CodeMirror-line > span::-moz-selection,
-.CodeMirror-line > span > span::-moz-selection {
+.CodeMirror-line>span::-moz-selection,
+.CodeMirror-line>span>span::-moz-selection {
   background: var(--selected-bg);
 }
 
@@ -531,6 +592,7 @@ div.CodeMirror-dragcursors {
 }
 
 @media print {
+
   /* Hide the cursor when printing */
   .CodeMirror div.CodeMirror-cursors {
     visibility: hidden;
@@ -539,7 +601,7 @@ div.CodeMirror-dragcursors {
 
 /* See issue #2901 */
 .cm-tab-wrap-hack:after {
-  content: "";
+  content: '';
 }
 
 /* Help users use markselection to safely style text background */
